Fix z-index

--- a/frontend/src/css/components/comment_item.scss
+++ b/frontend/src/css/components/comment_item.scss
@@ -72,12 +72,14 @@
                         position: absolute;
                         bottom: 2px;
                         right: 82px;
+                        z-index: 2;
                     }
 
                     .icon:nth-child(2){
                         position: absolute;
                         bottom: 2px;
                         right: 34px;
+                        z-index: 2;
                     }
 
                     .fa-trash-alt:hover {
